--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "generate-types": "npx typechain --target=truffle-v5 './build/contracts/*.json'",
     "postinstall": "npm run compile && npm run generate-types",
+    "flatten":"truffle-flattener",
     "lint": "eslint test",
     "compile": "truffle compile",
     "develop": "truffle develop",
@@ -46,6 +47,7 @@
     "prettier": "^2.3.1",
     "prettier-plugin-solidity": "^1.0.0-beta.13",
     "sol-merger": "^3.1.0",
+    "truffle-flattener": "^1.6.0",
     "ts-mocha": "^9.0.2",
     "typechain": "^7.0.1"
   }
